fix: remove word-break as its unintented wrap on homepage.

--- a/news.ycombinator.com.user.css
+++ b/news.ycombinator.com.user.css
@@ -1,24 +1,17 @@
 /* ==UserStyle==
 @name           UserCSS for news.ycombinator.com
 @namespace      https://github.com/gslin/usercss/raw/master/news.ycombinator.com.user.css
-@version        0.20240713.0
+@version        0.20241005.0
 @description    UserCSS for news.ycombinator.com
 @author         Gea-Suan Lin <gslin@gslin.com>
 ==/UserStyle== */
 
 @-moz-document domain("news.ycombinator.com") {
-    @font-face {
-        font-family: "Verdana";
-        src: local("DejaVu Sans");
-    }
     .comment-tree tr > td:nth-of-type(2) {
         border-left: 1px solid #bbb;
         padding-left: 0.5em;
     }
     #hnmain > tbody > tr > td {
         padding-right: 0.5em;
-    }
-    td {
-        word-break: break-word;
     }
 }
